--- a/public/i18n/en.json
+++ b/public/i18n/en.json
@@ -651,7 +651,7 @@
     {
       "data": {
         "stringId": 534,
-        "text": "BLZD Stats"
+        "text": "CLOCK Stats"
       }
     },
     {
